--- a/pervane/templates/index.html
+++ b/pervane/templates/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon/favicon-16x16.png">
 
-    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/darkly/bootstrap.min.css" rel="stylesheet" >
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css" rel="stylesheet" >
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" >
+    <link href="/static/css/dropzone.min.css" rel="stylesheet" >
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/editormd.min.css" />
     <link rel="stylesheet" href="/static/css/styles.css" />
@@ -246,9 +246,9 @@
   </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js"></script>
+<script src="/static/js/jquery-3.4.1.min.js"></script>
+<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/dropzone.min.js"></script>
 <script src="/static/js/editormd.min.js"></script>
 <script src="/static/js/en.js"></script>
 <script>
@@ -334,7 +334,7 @@ function initEditor(path) {
           // editor.setMarkdown(data.content);
           editor = editormd("editor", {
               width: "100%",
-              height: "100%",
+              height: "150%",
               taskList: (localStorage.settingsTaskLists) ? (localStorage.settingsTaskLists == '1'): false,
               // autoHeight: true,
               codeFold: (localStorage.settingsCodeFolding) ? (localStorage.settingsCodeFolding == '1'): false,
