Add reddit link

--- a/pervane/templates/index.html
+++ b/pervane/templates/index.html
@@ -32,6 +32,9 @@
           <a class="nav-link" href="#" data-toggle="modal" onclick="showSettingsModal()">Settings</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="https://reddit.com/r/pervane">Discuss/Feedback</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="https://github.com/hakanu/pervane">Contribute</a>
         </li>
       </ul>
