Add ack support in case ag is not installed for search (fixes #51 fixes #53)

--- a/pervane/templates/index.html
+++ b/pervane/templates/index.html
@@ -42,7 +42,7 @@
 			<button class="btn btn-large fileinput-button">Upload file</button>
 
       <form class="form-inline mt-2 mt-md-0" action="/search" method="GET">
-        <input class="form-control mr-sm-2" type="text" name="query" placeholder="Search files with ag" aria-label="Search">
+        <input class="form-control mr-sm-2" type="text" name="query" placeholder="Search everything with ag or ack" aria-label="Search">
       </form>
     </div>
   </nav>
