--- a/pervane/templates/index.html
+++ b/pervane/templates/index.html
@@ -54,7 +54,7 @@
       <p>
         <a href="/">
           <i class="fa fa-folder" aria-hidden="true"></i>
-          {{ tree.path}}
+          {{ tree.path|replace(root_dir, '/')}}
         </a>
 
         <span>
@@ -114,7 +114,7 @@
       <p id="message"></p>
       {% if not search_results %}
         <h6>
-          <a id="a-path" href="file://{{path}}" target="_blank">{{ path }} </a>&nbsp;&nbsp;
+          <a id="a-path" href="file://{{path}}" target="_blank">{{ path|replace(root_dir, '') }} </a>&nbsp;&nbsp;
           <span><a href="#" onclick="update()"><i class="fa fa-floppy-o" aria-hidden="true"></i>&nbsp;&nbsp;Save</a></span>
           <sub id="status"></sub>
         </h6>
@@ -602,3 +602,4 @@ $('#form-add-node').submit(function(event) {
 </script>
 </body>
 </html>
+
