Fix bullet point not showing up issue (fixes #69); focus on the text box upon new note creation (fixes #64); fix new note creation in the rool level (fixes #65)

--- a/pervane/templates/index.html
+++ b/pervane/templates/index.html
@@ -392,8 +392,15 @@ function update() {
 
 function addNode(parent) {
   $('#modal-input-parent-path').attr('value', parent);
-  $('#modal-input-prefix').text(parent + '/');
+  // Prevent root to be like //.
+  if (parent != '/') {
+    $('#modal-input-prefix').text(parent + '/');
+  }
   $('#nodeModal').modal();
+  // $('#nodeModal').modal(function () {
+      // setTimeout(function(){ $('#modal-input-new-node-name').focus(); }, 300);
+  // });
+  setTimeout(function(){ $('#modal-input-new-node-name').focus(); }, 500);
 }
 
 function themeSelect(id, themes, lsKey, callback) {
