--- a/pervane/static/css/styles.css
+++ b/pervane/static/css/styles.css
@@ -1,14 +1,16 @@
 body {
   margin: 10px;
-  font-family: 'PT Sans', sans-serif;
+  /* font-family: 'PT Sans', sans-serif; */
   padding-top: 3rem;
   padding-bottom: 3rem;
 /*  color: #5a5a5a;*/
 /*        font-size: 1.5vw;*/
-  background-color:rgb(90, 90, 90);
+  /* background-color:rgb(90, 90, 90); */
+  background-color: black;
+  background-color: #272822;
 }
 
-ul {
+/* ul {
   padding-left: 12px;
 }
 
@@ -20,7 +22,7 @@ ul li ul {
 .sidebar ul {
   list-style: none;
   list-style-type: none;
-}
+} */
 
 header input {
   max-height: 30px;
@@ -29,7 +31,9 @@ header input {
 }
 
 .sidebar {
-  background-color:rgb(90, 90, 90);
+  /* background-color:rgb(90, 90, 90); */
+  /* background-color: black; */
+  background-color: #272822;
   color: white;
   font-size: 13px;
 }
@@ -52,3 +56,20 @@ header input {
   padding-bottom: 0px;
 }
 
+/* Folder styles */
+body {
+  font-family: Menlo, Consolas, monospace;
+  /* color: #444; */
+  color: white;
+}
+.item {
+  cursor: pointer;
+}
+.bold {
+  font-weight: bold;
+}
+ul {
+  padding-left: 1em;
+  line-height: 1.5em;
+  list-style-type: dot;
+}
